--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,9 +1,15 @@
 .headerContainer {
+
+}
+
+.header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0.5rem 1rem;
   background-color: #fff;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .light {
