feature: form for register anfd login ui

--- a/src/components/TextInput/TextInput.module.css
+++ b/src/components/TextInput/TextInput.module.css
@@ -28,6 +28,10 @@
   border-radius: 5px;
 }
 
+.error {
+  border: 1px solid brown;
+}
+
 .input:focus + .highlighting {
   border: 2px solid var(--midu-azul);
 }
