--- a/src/components/Dropdown/Dropdown.module.css
+++ b/src/components/Dropdown/Dropdown.module.css
@@ -10,10 +10,18 @@
   min-width: 100px;
   border-radius: 5px;
   box-shadow: 2px 2px 16px -0px rgba(0, 0, 0, 0.16);
-  top: 0;
-  left: 0;
   z-index: 1;
   padding: 1rem .5rem;
+}
+
+.top {
+  top: 0;
+  left: 0;
+}
+
+.bottom {
+  top: 100%;
+  right: 0;
 }
 
 .item {
