--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,23 @@
   box-sizing: border-box;
 }
 
+li {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+}
+
+/* reset figure styles */
+figure {
+  margin: 0;
+  padding: 0;
+}
+
 :root {
   --dark-main: #5f6369;
   --dark-secondary: #5e6367;
