--- a/src/components/UserConfig/UserConfig.module.css
+++ b/src/components/UserConfig/UserConfig.module.css
@@ -1,6 +1,68 @@
 .configContainer {
+  align-items: stretch;
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: 0 auto;
+  max-width: 900px;
   width: 100%;
   height: 100%;
-  max-width: 900px;
+  margin-top: 10%;
+}
+
+@media screen and (max-width: 900px) {
+  .configContainer {
+    margin-top: 0;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.figureButtonsContainer{
+  position: absolute;
+  bottom: 1.3rem;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  gap: 2rem;
+}
+
+.figureButtons {
+  border: 2px solid brown;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #00000052;
+  cursor: pointer;
+  font-size: 1.5rem;
+}
+
+.figureButtonsDesactivate {
+  background-color: rgba(165, 42, 42, 0.428);
+}
+
+.figureFallback {
+  position: relative;
+  display: flex;
+}
+
+.figureFallback::after {
+  content: attr(name);
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-color: black;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2.5rem;
+  color: white;
 }
