feat: meeting layout

--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@ figure {
 
 :root {
   --dark-main: #5f6369;
-  --dark-secondary: #5e6367;
+  --dark-secondary: #75797d;
   --dark-highlight: #212121;
   --midu-azul: #09f;
   --midu-dark: #07c; /* buajaja */
