--- a/src/components/MeetingReady/MeetingReady.module.css
+++ b/src/components/MeetingReady/MeetingReady.module.css
@@ -2,7 +2,7 @@
   background-color: white;
   border-radius: 6px;
   position: absolute;
-  bottom: 3rem;
+  bottom: 5rem;
   left: 2rem;
   width: 400px;
   display: flex;
@@ -10,6 +10,7 @@
   align-items: center;
   justify-content: center;
   padding: 1rem;
+  z-index: 1111;
 }
 
 .closeButton {
