--- a/src/components/UserConfig/UserConfig.module.css
+++ b/src/components/UserConfig/UserConfig.module.css
@@ -66,3 +66,26 @@
   font-size: 2.5rem;
   color: white;
 }
+
+.button {
+  background-color: var(--dark-main);
+  border: none;
+  border-radius: 50%;
+  color: var(--white);
+  padding: .5rem;
+  font-size: 2rem;
+  aspect-ratio: 1;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: var(--dark-secondary);
+}
+
+.buttonDanger {
+  background-color: red;
+}
+
+.buttonDanger:hover {
+  background-color: brown;
+}
